fix contact me button spacing

--- a/styles.css
+++ b/styles.css
@@ -24,32 +24,32 @@
 
 }
 
-.home.header {
-    margin-top: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: orangered;
-    border: 5px solid black;
-}
+    .home.header {
+        margin-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        background-color: orangered;
+        border: 5px solid black;
+    }
 
-.home.image {
-    mix-blend-mode: multiply;
-    margin-top: 20px;
-}
+    .home.image {
+        mix-blend-mode: multiply;
+        margin-top: 20px;
+    }
 
-.home ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    margin-top: -15px;
-}
+    .home ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        margin-top: -15px;
+    }
 
-a:hover {
-    color: orangered;
-}
+    a:hover {
+        color: orangered;
+    }
 
 
 /* borders recipe page content */
@@ -67,7 +67,7 @@ a:hover {
 /* Displays Navigation at top of Web Page and allows for links to other recipes as well as the home page. */
 nav.container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border: 5px solid black;
     background-color: navajowhite;
